[project]
name = "demand-analysis-labs"
version = "0.1.0"
description = "Lab notebooks for demand analysis with text embeddings and double machine learning"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.3",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]
